services/order/deployments/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shopee-order
  labels:
    app: shopee-order
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8083
      protocol: TCP
    - name: grpc
      port: 9093
      targetPort: 9093
      protocol: TCP
  selector:
    app: shopee-order
